# game_2048

./: CMakeLists.txt  README.md
src/: board.cpp  board.h  game.cpp  game.h  main.cpp  render.cpp  render.h
